--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -9,7 +9,7 @@ jobs:
               uses: actions/checkout@v4
             - name: Install Dependencies
               run: |
-                sudo apt-get install -y jq dnsutils
+                sudo apt-get install -y jq dnsutils ipcalc-ng
             - name: Generate Hosts
               run: ./Cealing-Gen.sh
             - name: Create Release
